--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -183,8 +183,8 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 ### Include "openssl" executable for generate certificates. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
-### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+### Include xUPNPd IPTV mediaserver. ~0.3MB【删除1】
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=n
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
