--- a/.github/workflows/K2P.yml
+++ b/.github/workflows/K2P.yml
@@ -425,9 +425,9 @@ jobs:
         #echo "CONFIG_FIRMWARE_INCLUDE_NVPPROXY=n" >> .config #NVPPROXY 已删除 请查看/trunk/user/httpd/common.h
         ##科学上网## 已删除 请查看/trunk/user/httpd/common.h
         echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+ 科学上网插件
-        echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=y" >> .config #无需集成会在线下载
-        echo "CONFIG_FIRMWARE_INCLUDE_XRAY=y" >> .config #无需集成会在线下载
-        echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=y" >> .config #无需集成会在线下载
+        #echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=y" >> .config #无需集成会在线下载
+        #echo "CONFIG_FIRMWARE_INCLUDE_XRAY=y" >> .config #无需集成会在线下载
+        #echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=y" >> .config #无需集成会在线下载
         echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=y" >> .config # simple-obfs混淆插件
         
         #########################################################################################
